# 8_hours_to_ceo

./: .gitignore  Cargo.toml  shell.nix  wasm.sh
.github/workflows/: release.yaml
src/: main.rs
src/game/: animation.rs  chest.rs  circle_sectors.rs  cursor.rs  enemy.rs  hp_bar.rs  inventory.rs  items.rs  mod.rs  player.rs  sections.rs  sound.rs  spells.rs
src/ui/: in_game.rs  main_menu.rs  mod.rs  settings.rs
